Corrected few issues with print option not working as wanted. Also made few visual changes, hope for better. Added React Api to projects

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
             <div class='row'>
                 <div class='col-2 col-pr-1'>
                 </div>
-                <div class='col-4 col-pr-10'>
+                <div class='col-10 col-pr-11'>
                     <h1 class='logo'><span class='logo__element'>&lt;</span class='logo__text'>Paweł Kłeczek <span class='logo__element'>/&gt;</span></h1>
-                </div>
-                <div class='col-6'>
-                    <h2 class='element_conditional'>front-end developer</h2>
                 </div>
             </div>
         </header>
@@ -55,22 +52,26 @@
                     </div>
                 </div>
             </div>
-            <div class='row infos'>
+            <div class='row'>
+				<div class="infos">
                 <div class='col-2 col-pr-1'>
                 </div>
-                <div class='col-4 col-pr-5 info-box'>
+                <div class='col-4 col-pr-5'>
+					<div class=" info-box">
                         <div class='info-box__header'>
                             <i class='fa fa-connectdevelop info-box__icon' aria-hidden='true'></i>
                             <h2 class='info-box__text'>Projects</h2>
                         </div>
                         <ul class='info-box__list'>
+							<li class='info-box__item'><a class='info-box__link' href='https://pawelkleczek.github.io/reactApi/#/' target='_blank'>React Api</a></li>
                             <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/oZvzGL/' target='_blank'>Twitch TV Api</a> </li>
                             <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/XpLZOq/' target='_blank'>Wikipedia Api</a></li>
                             <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/WGPRGw/' target='_blank'>Weather Api</a></li>
-                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/bwjRmz/' target='_blank'>Quote Machine</a></li>
                         </ul>
                 </div>
-                <div class='col-6 col-pr-6 info-box'>
+				</div>
+                <div class='col-6 col-pr-6'>
+					<div class='info-box'>
                         <div class='info-box__header'>
                             <i class='fa fa-terminal info-box__icon' aria-hidden='true'></i>
                             <h2 class='info-box__text'>Skills</h2>
@@ -81,12 +82,15 @@
                             <li class='info-box__item'>JavaScript &amp; jQuery</li>
 							<li class='info-box__item'>ES6 &amp; React</li>
                         </ul>
+					</div>
+
                 </div>
 			</div>
 			<div class='row infos'>
                 <div class='col-2 col-pr-1'>
                 </div>
-                <div class='col-4 col-pr-5 info-box'>
+                <div class='col-4 col-pr-5'>
+					<div class='info-box'>
                         <div class='info-box__header'>
                             <i class='fa fa-grav info-box__icon' aria-hidden='true'></i>
                             <h2 class='info-box__text'>Tools</h2>
@@ -97,8 +101,10 @@
                             <li class='info-box__item'>Gulp &amp; Webpack</li>
 							<li class='info-box__item'>Node</li>
                         </ul>
+					</div>
                 </div>
-                <div class='col-6 col-pr-6 info-box'>
+                <div class='col-6 col-pr-6'>
+					<div class='info-box'>
                         <div class='info-box__header'>
                             <i class='fa fa-graduation-cap info-box__icon' aria-hidden='true'></i>
                             <h2 class='info-box__text'>Education</h2>
@@ -115,20 +121,23 @@
                                 </ul>
                             </li>
                         </ul>
+					</div>
                 </div>
             </div>
+		</div>
         </main>
         <footer class='footer'>
             <div class='row'>
                 <div class='col-2 col-pr-1'>
                 </div>
                 <div class='col-8 col-pr-10'>
-                    <h2 class='logo'><span class='logo__element'>&lt;</span class='logo__text'>Work Experience<span class='logo__element'>/&gt;</span></h2>
+                    <h2 class='logo'>&lt;Work Experience/&gt;</h2>
                 </div>
             </div>
             <div class='row'>
                 <div class='col-2 col-pr-1'></div>
-                <div class='col-8  col-pr-10 experience'>
+                <div class='col-8  col-pr-10'>
+					<div class="experience">
                     <ul class='list'>
                         <li class='list__item'>Freelance musician
                             <ul class='list'>
@@ -161,6 +170,7 @@
                             </ul>
                         </li>
                     </ul>
+					</div>
                 </div>
             </div>
 			<div class='row'>
