Made paper view on web page, deleted facebook link, and added ending to mail address

--- a/index.html
+++ b/index.html
@@ -12,175 +12,152 @@
 
 <body>
     <div class='container'>
-        <header class='header'>
-            <div class='row'>
-                <div class='col-2 col-pr-1'>
-                </div>
-                <div class='col-10 col-pr-11'>
-                    <h1 class='logo'><span class='logo__element'>&lt;</span class='logo__text'>Paweł Kłeczek <span class='logo__element'>/&gt;</span></h1>
-                </div>
-            </div>
-        </header>
-        <main class='main'>
-            <div class='row'>
-                <div class='col-2 col-pr-1'>
-                </div>
-                <div class='col-4 col-pr-5'>
-                    <div class='contact-info'>
-                        <i class='fa fa-map-marker contact-info__icon' aria-hidden='true'></i> <span class='contact-info__text'>Warsaw,PL</span>
-                    </div>
-                    <div class='contact-info'>
-                        <i class='fa fa-mobile contact-info__icon' aria-hidden='true'></i>
-                        <span class='contact-info__text'>502631476</span>
-                    </div>
-                    <div class='contact-info'>
-                        <i class='fa fa-google contact-info__icon' aria-hidden='true'></i>
-                        <span class='contact-info__text'><a class='contact-info__link' href='mailto:pa.vel.kleczek@gmail.com?Subject=Praca%20front-end' target='_top'>pa.vel.kleczek@</a></span>
-                    </div>
-                </div>
-                <div class='col-4 col-pr-5'>
-                    <div class='contact-info'>
-                        <i class='fa fa-facebook-official contact-info__icon' aria-hidden='true'></i> <span class='contact-info__text'><a class='contact-info__link' href='https://www.facebook.com/pa.vel.kleczek' target='blank'>/pa.vel.kleczek</a></span>
-                    </div>
-                    <div class='contact-info'>
-                        <i class='fa fa-github contact-info__icon' aria-hidden='true'></i>
-                        <span class='contact-info__text'><a class='contact-info__link' href='https://github.com/pawelkleczek' target='blank'>/pawelkleczek</a></span>
-                    </div>
-                    <div class='contact-info'>
-                        <i class='fa fa-linkedin contact-info__icon' aria-hidden='true'></i>
-                        <span class='contact-info__text'><a class='contact-info__link' href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>/in/pawelkleczek</a></span>
-                    </div>
-                </div>
-            </div>
-            <div class='row'>
-				<div class="infos">
-                <div class='col-2 col-pr-1'>
-                </div>
-                <div class='col-4 col-pr-5'>
-					<div class=" info-box">
-                        <div class='info-box__header'>
-                            <i class='fa fa-connectdevelop info-box__icon' aria-hidden='true'></i>
-                            <h2 class='info-box__text'>Projects</h2>
+        <div class='row'>
+            <div class='col-2 col-pr-1'></div>
+            <div class='col-8 col-pr-12 page'>
+                <header class='header'>
+                            <h1 class='logo'><span class='logo__element'>&lt;</span class='logo__text'>Paweł Kłeczek <span class='logo__element'>/&gt;</span></h1>
+                </header>
+                <main class='main'>
+                    <div class='row'>
+                        <div class='col-6 col-pr-6'>
+                            <div class='contact-info'>
+                                <i class='fa fa-map-marker contact-info__icon' aria-hidden='true'></i> <span class='contact-info__text'>Warsaw,PL</span>
+                            </div>
+                            <div class='contact-info'>
+                                <i class='fa fa-mobile contact-info__icon' aria-hidden='true'></i>
+                                <span class='contact-info__text'>502631476</span>
+                            </div>
+							<div class='contact-info contact-info_different'>
+								<i class='fa fa-google contact-info__icon' aria-hidden='true'></i>
+								<span class='contact-info__text'><a class='contact-info__link' href='mailto:pa.vel.kleczek@gmail.com?Subject=Praca%20front-end' target='_top'>pa.vel.kleczek@gmail.com</a></span>
+							</div>
                         </div>
-                        <ul class='info-box__list'>
-							<li class='info-box__item'><a class='info-box__link' href='https://pawelkleczek.github.io/reactApi/#/' target='_blank'>React Api</a></li>
-                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/oZvzGL/' target='_blank'>Twitch TV Api</a> </li>
-                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/XpLZOq/' target='_blank'>Wikipedia Api</a></li>
-                            <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/WGPRGw/' target='_blank'>Weather Api</a></li>
-                        </ul>
-                </div>
-				</div>
-                <div class='col-6 col-pr-6'>
-					<div class='info-box'>
-                        <div class='info-box__header'>
-                            <i class='fa fa-terminal info-box__icon' aria-hidden='true'></i>
-                            <h2 class='info-box__text'>Skills</h2>
+                        <div class='col-6 col-pr-6'>
+                            <div class='contact-info'>
+                                <i class='fa fa-github contact-info__icon' aria-hidden='true'></i>
+                                <span class='contact-info__text'><a class='contact-info__link' href='https://github.com/pawelkleczek' target='blank'>/pawelkleczek</a></span>
+                            </div>
+                            <div class='contact-info'>
+                                <i class='fa fa-linkedin contact-info__icon' aria-hidden='true'></i>
+                                <span class='contact-info__text'><a class='contact-info__link' href='https://www.linkedin.com/in/pawelkleczek/' target='blank'>/in/pawelkleczek</a></span>
+                            </div>
                         </div>
-                        <ul class='info-box__list'>
-                            <li class='info-box__item'>HTML5 &amp; RWD</li>
-                            <li class='info-box__item'>CSS3 &amp; Sass</li>
-                            <li class='info-box__item'>JavaScript &amp; jQuery</li>
-							<li class='info-box__item'>ES6 &amp; React</li>
-                        </ul>
-					</div>
+                    </div>
+                    <div class='row'>
+                        <div class='infos'>
+                            <div class='col-6 col-pr-6'>
+                                <div class=' info-box'>
+                                    <div class='info-box__header'>
+                                        <i class='fa fa-connectdevelop info-box__icon' aria-hidden='true'></i>
+                                        <h2 class='info-box__text'>Projects</h2>
+                                    </div>
+                                    <ul class='info-box__list'>
+                                        <li class='info-box__item'><a class='info-box__link' href='https://pawelkleczek.github.io/reactApi/#/' target='_blank'>React Api</a></li>
+                                        <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/oZvzGL/' target='_blank'>Twitch TV Api</a> </li>
+                                        <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/XpLZOq/' target='_blank'>Wikipedia Api</a></li>
+                                        <li class='info-box__item'><a class='info-box__link' href='https://codepen.io/pawelkleczek/full/WGPRGw/' target='_blank'>Weather Api</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class='col-6 col-pr-6'>
+                                <div class='info-box'>
+                                    <div class='info-box__header'>
+                                        <i class='fa fa-terminal info-box__icon' aria-hidden='true'></i>
+                                        <h2 class='info-box__text'>Skills</h2>
+                                    </div>
+                                    <ul class='info-box__list'>
+                                        <li class='info-box__item'>HTML5 &amp; RWD</li>
+                                        <li class='info-box__item'>CSS3 &amp; Sass</li>
+                                        <li class='info-box__item'>JavaScript &amp; jQuery</li>
+                                        <li class='info-box__item'>ES6 &amp; React</li>
+                                    </ul>
+                                </div>
 
-                </div>
-			</div>
-			<div class='row infos'>
-                <div class='col-2 col-pr-1'>
-                </div>
-                <div class='col-4 col-pr-5'>
-					<div class='info-box'>
-                        <div class='info-box__header'>
-                            <i class='fa fa-grav info-box__icon' aria-hidden='true'></i>
-                            <h2 class='info-box__text'>Tools</h2>
+                            </div>
                         </div>
-                        <ul class='info-box__list'>
-                            <li class='info-box__item'>Terminal</li>
-                            <li class='info-box__item'>Git</li>
-                            <li class='info-box__item'>Gulp &amp; Webpack</li>
-							<li class='info-box__item'>Node</li>
-                        </ul>
-					</div>
-                </div>
-                <div class='col-6 col-pr-6'>
-					<div class='info-box'>
-                        <div class='info-box__header'>
-                            <i class='fa fa-graduation-cap info-box__icon' aria-hidden='true'></i>
-                            <h2 class='info-box__text'>Education</h2>
+                        <div class='row infos'>
+                            <div class='col-6 col-pr-6'>
+                                <div class='info-box'>
+                                    <div class='info-box__header'>
+                                        <i class='fa fa-grav info-box__icon' aria-hidden='true'></i>
+                                        <h2 class='info-box__text'>Tools</h2>
+                                    </div>
+                                    <ul class='info-box__list'>
+                                        <li class='info-box__item'>Terminal</li>
+                                        <li class='info-box__item'>Git</li>
+                                        <li class='info-box__item'>Gulp &amp; Webpack</li>
+                                        <li class='info-box__item'>Node</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class='col-6 col-pr-6'>
+                                <div class='info-box'>
+                                    <div class='info-box__header'>
+                                        <i class='fa fa-graduation-cap info-box__icon' aria-hidden='true'></i>
+                                        <h2 class='info-box__text'>Education</h2>
+                                    </div>
+                                    <ul class='info-box__list'>
+                                        <li class='info-box__item'>CodersLab
+                                            <ul class='info-box__list'>
+                                                <li class='info-box__item'>Front-End Dev 2017</li>
+                                            </ul>
+                                        </li>
+                                        <li class='info-box__item'>Music Academy in Katowice
+                                            <ul class='info-box__list'>
+                                                <li class='info-box__item'>Jazz Guitar MD 2010</li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
-                        <ul class='info-box__list'>
-                            <li class='info-box__item'>CodersLab
-                                <ul class='info-box__list'>
-                                    <li class='info-box__item'>Front-End Dev 2017</li>
+                    </div>
+                </main>
+                <footer class='footer'>
+                            <h2 class='logo'>&lt;Work Experience/&gt;</h2>
+							<div class="col-10 col-pr-12">
+                            <div class='experience'>
+                                <ul class='list'>
+                                    <li class='list__item'>Freelance musician
+                                        <ul class='list'>
+                                            <li class='list__item'>2014-2016</li>
+                                            <li class='list__item'>Playing in numerous music projects, teaching a private group of students.</li>
+                                        </ul>
+                                    </li>
+
+                                    <li class='list__item'>Manager &amp; guitar teacher
+                                        <ul class='list'>
+                                            <li class='list__item'>at gryfomania.pl &amp; ukuleleschool.pl</li>
+                                            <li class='list__item'>2011-2014</li>
+                                            <li class='list__item'>Leading own music schools, employing other teachers, taking care of the websites, but also teaching guitar and music theory.</li>
+                                        </ul>
+                                    </li>
+
+                                    <li class='list__item'>Guitar teacher
+                                        <ul class='list'>
+                                            <li class='list__item'>at szkola-muzyki.pl</li>
+                                            <li class='list__item'>2009-2011</li>
+                                            <li class='list__item'>Teaching guitar in one of the most popular spots in Warsaw. Teaching foreign students in English.</li>
+                                        </ul>
+                                    </li>
+
+                                    <li class='list__item'>Data administrator
+                                        <ul class='list'>
+                                            <li class='list__item'>at Procter &amp; Gamble</li>
+                                            <li class='list__item'>2008-2009</li>
+                                            <li class='list__item'>Data administration for a line of P&amp;G products. Work mainly in Excel and SAP, both in Polish and English.</li>
+                                        </ul>
+                                    </li>
                                 </ul>
-                            </li>
-                            <li class='info-box__item'>Music Academy in Katowice
-                                <ul class='info-box__list'>
-                                    <li class='info-box__item'>Jazz Guitar MD 2010</li>
-                                </ul>
-                            </li>
-                        </ul>
-					</div>
-                </div>
+							</div>
+                            <p class='agreement'>Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016 r. poz. 922).</p>
+							</div>
+                </footer>
             </div>
-		</div>
-        </main>
-        <footer class='footer'>
-            <div class='row'>
-                <div class='col-2 col-pr-1'>
-                </div>
-                <div class='col-8 col-pr-10'>
-                    <h2 class='logo'>&lt;Work Experience/&gt;</h2>
-                </div>
-            </div>
-            <div class='row'>
-                <div class='col-2 col-pr-1'></div>
-                <div class='col-8  col-pr-10'>
-					<div class="experience">
-                    <ul class='list'>
-                        <li class='list__item'>Freelance musician
-                            <ul class='list'>
-                                <li class='list__item'>2014-2016</li>
-                                <li class='list__item'>Playing in numerous music projects, teaching a private group of students.</li>
-                            </ul>
-                        </li>
 
-                        <li class='list__item'>Manager &amp; guitar teacher
-                            <ul class='list'>
-                                <li class='list__item'>at gryfomania.pl &amp; ukuleleschool.pl</li>
-                                <li class='list__item'>2011-2014</li>
-                                <li class='list__item'>Leading own music schools, employing other teachers, taking care of the websites, but also teaching guitar and music theory.</li>
-                            </ul>
-                        </li>
-
-                        <li class='list__item'>Guitar teacher
-                            <ul class='list'>
-                                <li class='list__item'>at szkola-muzyki.pl</li>
-                                <li class='list__item'>2009-2011</li>
-                                <li class='list__item'>Teaching guitar in one of the most popular spots in Warsaw. Teaching foreign students in English.</li>
-                            </ul>
-                        </li>
-
-                        <li class='list__item'>Data administrator
-                            <ul class='list'>
-                                <li class='list__item'>at Procter &amp; Gamble</li>
-                                <li class='list__item'>2008-2009</li>
-                                <li class='list__item'>Data administration for a line of P&amp;G products. Work mainly in Excel and SAP, both in Polish and English.</li>
-                            </ul>
-                        </li>
-                    </ul>
-					</div>
-                </div>
-            </div>
-			<div class='row'>
-				<div class='col-2 col-pr-1'>
-				</div>
-				<div class='col-8 col-pr-10'>
-					<p class='agreement'>Wyrażam zgodę na przetwarzanie moich danych osobowych dla potrzeb niezbędnych do realizacji procesu rekrutacji (zgodnie z Ustawą z dnia 29.08.1997 roku o Ochronie Danych Osobowych; tekst jednolity: Dz. U. 2016 r. poz. 922).</p>
-				</div>
-			</div>
-        </footer>
+        </div>
     </div>
 </body>
+
 </html>
